hphp/test/zend/good/Zend/tests/traits/error_002.php.expectf

Fatal error: Unknown trait 'abc' in %s/error_002.php on line 3
